# baseOS

./: .gitignore  LICENCE.md  README.md  os-release.txt  todo.md  util  util.bak
bootloader/configs/: limine-debug.conf
bootloader/limine/: limine-Darwin-arm64  limine-Linux-aarch64
config/: kernel.conf  os.conf  qemu-parameters.conf  util-arm64.conf  util-x86_64.conf  util.conf
files/: .rustc_info.json  BaseOS-x86_64.iso  baseOS.iso
files/base/: README.md  scripts.conf
files/base/scripts/: build  change  conf  dep  help  info  (+3 more)
kernel/: init.asm  name
kernel/.cargo/: config.toml
kernel/c/: init.asm  linker.ld
kernel/rust/: Cargo.toml
kernel/rust/.cargo/: config.toml
kernel/rust/lib/bootloader/: Cargo.toml
kernel/rust/lib/bootloader/src/: lib.rs
kernel/rust/lib/limine/src/: lib.rs  modules.rs  mp.rs
kernel/rust/lib/ministd/: Cargo.toml
kernel/rust/lib/ministd/src/: array.rs  convert.rs  lib.rs  string.rs
kernel/rust/lib/ministd/src/io/: mod.rs  text.rs
kernel/rust/lib/ministd/src/mem/: heap.rs  mod.rs  rosync.rs
kernel/rust/lib/ministd/src/renderer/: color.rs  font.rs  mod.rs  renderer.rs
kernel/rust/lib/ministd/src/sync/: mod.rs  mutex.rs  rosync.rs  rwlock.rs
kernel/rust/src/: bootloader.rs  convert.rs  font.rs  init.rs  io.rs  manage.rs  prelude.rs  renderer.rs  sync.rs
kernel/rust/src/limine/: mod.rs  request.rs  response.rs  smp.rs
kernel/rust/src/manage/: kernel_state.rs  mod.rs
kernel/rust/src/mem/: mod.rs
kernel/rust/src/memory/: mod.rs
kernel/rust/src/renderer/: renderer.rs
kernel/src/: init.c  render.c  utils.c
(+21 files in other folders)
